added style for password

--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
       referrerpolicy="no-referrer"
     />
     <!-- link to Font-Family and CSS Files -->
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="css/style.css" />
     <!-- Document Title -->
     <title>Document</title>
   </head>
 
   <body>
-   <h1 id="password">
-
-   </h1>
+   <div class="position-relative">
+       <h1 id="password" class="rounded-2 p-3">
+        sdiufjbsdk
+       </h1>
+   </div>
 
     <!-- My JS -->
     <script
