changed bg style

--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
   </head>
 
   <body>
-   <div class="position-relative">
+   <div class="position-relative bg-success bg-gradient bg-opacity-75">
        <h1 id="password" class="rounded-2 p-3">
-        sdiufjbsdk
        </h1>
    </div>
 
