added reset button

--- a/index.html
+++ b/index.html
@@ -27,8 +27,16 @@
 
   <body>
    <div class="position-relative bg-success bg-gradient bg-opacity-75">
-       <h1 id="password" class="rounded-2 p-3">
-       </h1>
+        <div class="box rounded-2 p-3 d-flex flex-column justify-content-center align-items-center">
+            <h2>
+                This is Your Password:
+            </h2>
+            <h1 id="password">
+            </h1>
+            <a href="index.html" class="btn border">
+                Reset
+            </a>
+        </div>
    </div>
 
     <!-- My JS -->
